<?xml version="1.0"?>
<package>

  <name>mrs_mavros_interface</name>
  <version>1.0.0</version>
  <description>The mrs_main package</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mrs_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mrs_lib</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>mrs_lib</run_depend>

  <export>
    <nodelet plugin="${prefix}/mavros_interface.xml" />
    <nodelet plugin="${prefix}/mavros_diagnostics.xml" />
  </export>

</package>
