<?xml version="1.0"?>
<package format="2">

  <name>mrs_mavros_interface</name>
  <version>0.0.5</version>
  <description>The mrs_main package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>mrs_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mavros_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
